# dev_ws

./: .gitignore  CLAUDE.md  motor_calibrate.py  push.sh  test_usart1.py  常用命令.sh
src/my_bot/config/: gz_bridge.yaml  my_controllers.yaml
src/my_bot/description/: imu.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
src/my_bot/python/: odom_monitor.py
src/my_bot/worlds/: my_world.sdf
src/my_bot_hw/: CMakeLists.txt  my_bot_hw.xml  my_bot_hw_plugin.xml  package.xml
src/my_bot_hw/config/: controllers.yaml  ekf_hw.yaml  hw_controllers.yaml  imu_complementary_filter.yaml  laser_filters.yaml  mapper_params_hw.yaml  mapper_params_hw_mapping.yaml  my_bot_hw.ros2_control.xacro  nav2_params_hw.yaml
src/my_bot_hw/config/maps/: my_map_serial.data  my_map_serial.posegraph
src/my_bot_hw/description/: ros2_control_hw.xacro
src/my_bot_hw/docs/: commands_cheatsheet.md  frequency_config.md  laser_filters_tuning_guide.md  my_bot_hw常用命令.sh  robot_bringup_topics.md
src/my_bot_hw/include/my_bot_hw/: my_bot_hw_interface.hpp  serial_utils.hpp  stm32_serial_hw.hpp
src/my_bot_hw/launch/: hardware.launch.py  nav_slam.launch.py  robot_bringup.launch.py
src/my_bot_hw/scripts/: straight_drive_corrector.py
src/my_bot_hw/src/: my_bot_hw_interface.cpp  serial_utils.cpp  stm32_serial_hw.cpp
src/my_bot_hw/tools/: serial_protocol_check.py
src/script/: imu_covariance_probe.py  left_radius_calibrator.py  monitor.py  odom_lpf_alpha_probe.py  odom_vx_covariance_probe.py
src/script/imu协方差脚本日志/: 添加协方差后  静止日志
src/script/odom脚本日志/: 动态  静态
